--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "figma-dash-fonts",
   "version": "1.0.0",
-  "description": "Figma Dash sub API to handle font linking",
-  "main": "main.js",
-  "files": [
-    "main.js",
-    "src"
-  ],
+  "description": "",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "Levi Pires",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "css": "^3.0.0",
-    "figma-dash-core": "https://levi-pires:levi7328@github.com/Meiuca/figma-dash-core.git",
+    "figma-dash-core": "https://levi-pires:levi7328@github.com/Meiuca/figma-dash-core.git#ts",
     "opentype.js": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/css": "^0.0.31",
+    "@types/node": "^14.14.14",
+    "@types/opentype.js": "^1.3.1",
+    "typescript": "^4.1.3"
   }
 }
