Add git deploy tokens

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "css": "^3.0.0",
-    "meiuca-engine-core": "https://github.com/Meiuca/meiuca-engine-core",
+    "meiuca-engine-core": "git+https://34f081c16a96b44163ab33cd5a4bc83ba3f22f24:x-oauth-basic@github.com/Meiuca/meiuca-engine-core",
     "opentype.js": "^1.3.3"
   },
   "devDependencies": {
